--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -517,7 +517,7 @@ a.moin-conflict:before
             tr th
                     text-align center
                     input[type="Submit"]
-                        width 26px
+                        padding 4px 10px
                         box-shadow 1px 1px 2px shadow_color
                         cursor pointer
                         &:hover
