--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -412,13 +412,12 @@ input.blank
     padding 10px
     margin 0
 
-.popup-closer
+input[value="X"]
     padding 0px 1px
     margin -0.2em
     width 19px
     border-radius 2em
     float right
-    cursor pointer
     &:hover
         background page_color
 
