Foobar theme item index width

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -291,7 +291,8 @@ input.blank
     margin-left: 0.5em
     div
         float left
-        width 15em
+        width 13em
+        line-height 2em
         .moin-select-item
             visibility hidden
             display inline-block
