--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -224,7 +224,7 @@ input.blank{border-color:#ccc;border-width:2px}
 #moin-initials a{display:inline-block;margin:0;padding:4px 5px;}
 #moin-initials a:hover,#moin-initials a.selected{background:#4fa8fa;border-radius:5px;color:#fff;text-decoration:none}
 .moin-item-index{width:100%;margin-left:.5em;}
-.moin-item-index div{float:left;width:15em;}
+.moin-item-index div{float:left;width:13em;line-height:2em;}
 .moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;vertical-align:middle;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat}
 .moin-item-index div.selected-item .moin-select-item,.moin-item-index div:hover .moin-select-item{visibility:visible}
 .moin-item-index div.selected-item .moin-select-item{background-image:url("../img/moin-checkbox-on.png")}
