--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -194,7 +194,7 @@ input[type="submit"],
 input[type="button"],
 button
     font-weight bold
-    font-size 12px
+    font-size .75em
     background base_color
     padding 4px 15px
     border border_style
@@ -218,7 +218,7 @@ input[type="text"]
 input.blank
     border-color border_color
     border-width 2px
-
+    
 .moin-form 
     dd
         margin-bottom 1em
@@ -321,7 +321,7 @@ input.blank
   
 .filter-toggle
     margin 0 0.2em
-    font-size 90%
+    font-size .9em
 
 .moin-more-index
     background transparent url("../img/moin-expand.png") no-repeat
@@ -331,7 +331,7 @@ input.blank
         text-decoration none
 
 .moin-path-separator
-    font-size 120%
+    font-size 1.2em
     color link_color
 
 .moin-index-separator
@@ -344,11 +344,11 @@ input.blank
 .moin-select-all
     span
         cursor pointer
-        font-size 84%
+        font-size .84em
 .moin-select-actions
     span
         cursor pointer
-        font-size 84%
+        font-size .84em
     ul
         display none
         li
@@ -356,7 +356,7 @@ input.blank
 .moin-contenttypes-wrapper
     div
         cursor pointer
-        font-size 84%
+        font-size .84em
     form 
         display none
         li
@@ -499,13 +499,13 @@ a.moin-conflict:before
 
 #moin-usersetting-title
     li a
-        font-size 84%
+        font-size .84em
         color heading_color
 
 // history page
 #moin-global-history,
 #moin-page-history
-    font-size 75%
+    font-size .75em
 
 #moin-page-history
     table
@@ -520,6 +520,7 @@ a.moin-conflict:before
                         padding 4px 10px
                         box-shadow 1px 1px 2px shadow_color
                         cursor pointer
+                        font-size 1em
                         &:hover
                             box-shadow 1px 1px 2px font_color
 
@@ -573,7 +574,7 @@ a.moin-conflict:before
 .moin-history-container-body
     margin 0
     padding 0
-    font-size 14px
+    font-size 1.2em
     table
         margin 0
         width 100%
@@ -611,7 +612,7 @@ a.moin-conflict:before
     a
         margin-right 10px
         padding 3px 7px
-        font-size 20px
+        font-size 1.6em
         background page_color
         border 1px groove border_color
         border-radius 5px
@@ -682,7 +683,7 @@ a
     float right
     text-align right
     input
-        font-size 100%
+        font-size 1em
         vertical-align middle
         background-color page_color
         border border_style
@@ -801,7 +802,7 @@ ol
 
 // tags list / tag cloud
 tag_scale = 1.2
-tag_font_size = 100%
+tag_font_size = 1em
 
 ul.moin-tags
     list-style none
