Foobar theme moin-item-select margin correction

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -300,6 +300,7 @@ input.blank
             width 17px
             cursor default
             background transparent url("../img/moin-checkbox-off.png") no-repeat
+            margin-top 1em
         &.selected-item .moin-select-item,
         &:hover .moin-select-item
             visibility visible
