--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -225,7 +225,7 @@ input.blank{border-color:#ccc;border-width:2px}
 #moin-initials a:hover,#moin-initials a.selected{background:#4fa8fa;border-radius:5px;color:#fff;text-decoration:none}
 .moin-item-index{width:100%;margin-left:.5em;}
 .moin-item-index div{float:left;width:13em;line-height:2em;}
-.moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;vertical-align:middle;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat}
+.moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;vertical-align:middle;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat;margin-top:1em}
 .moin-item-index div.selected-item .moin-select-item,.moin-item-index div:hover .moin-select-item{visibility:visible}
 .moin-item-index div.selected-item .moin-select-item{background-image:url("../img/moin-checkbox-on.png")}
 #lightbox{background:#f0f0f0;opacity:.7;filter:alpha;position:absolute;left:0;top:0;width:100%;height:100%;z-index:9;margin:0;display:none}
