--- a/MoinMoin/themes/foobar/templates/index.html
+++ b/MoinMoin/themes/foobar/templates/index.html
@@ -18,7 +18,7 @@
         <li class="action-bar">
         <div class="moin-select-actions">
             <div>
-                <span class="show-action">Actions</span> 
+                <span>Actions</span> 
             </div>
             <ul>
                 <li id="moin-create-newitem">{{ _("New item") }}</li>
