Foobar theme content text size changed

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -53,6 +53,9 @@ body
 
 div p
     margin .5em .2em
+    font-size .9em
+    line-height 1.2em
+    text-align justify
 
 // the main elements - just the big picture first: panels, header, content, footer
 
