--- a/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
@@ -14,7 +14,7 @@ table_bg_color = #d0d0d0
 link_color = #4fa8fa
 hover_color = #007cef
 active_color = #51d443
-visited_color = #5693c1
+visited_color = #9787b5
 nonexistent_link_color = #bababa
 nonexistent_hover_color = #ff2727
 error_color = #ff2727
