--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -187,6 +187,14 @@ div p
     float opposite-position(dir)
     ul li
         display inline
+
+.moin-itemviews
+    a[title="Show"], a[title="Delete this item"], a[title="Completely destroy this item"],
+    a[title="Rename this item"], a[title="Edit or Upload"]
+        color link_color
+#moin-global-panel
+    a.moin-usersettings, a.moin-logout
+        color link_color
         
 // form
 label
