--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -207,11 +207,18 @@ input[type="submit"],input[type="button"],button{font-weight:bold;font-size:.75e
 input[type="submit"]:hover,input[type="button"]:hover,button:hover{box-shadow:1px 1px 2px #000}
 input[type="submit"]:active,input[type="button"]:active,button:active{position:relative;top:1px}
 input,select{padding:3px;background:#f0f0f0;border:1px solid #ccc;border-radius:2px}
-input[type="text"]{width:300px}
+input[type="text"]{width:96%}
 input.blank{border-color:#ccc;border-width:2px}
-.moin-form dd{margin-bottom:1em;}
-.moin-form dd input{width:20em}
+.moin-form dd{float:left;width:69%;margin-bottom:1em;margin-left:0;}
+.moin-form dd input{width:70%}
+.moin-form dt{clear:both;float:left;width:30%;text-align:right;margin-top:.3em;padding-right:1%;}
 .moin-form dt label.required:after{content:'*';color:#000}
+.moin-form button,.moin-form input[type="submit"]{margin-left:48%}
+#moin-modify dd{margin-left:.9em;width:100%;float:none}
+#moin-modify dt{float:none;text-align:left;width:auto}
+#moin-modify input[type="submit"]{margin-left:0}
+#moin-options dd{float:none;width:38%;display:table-cell;padding:1.2em}
+#moin-options dt{margin-left:10%;text-align:left;width:61%;margin-top:1.3em}
 #moin-create-table{width:95%;margin-left:auto;margin-right:auto;}
 #moin-create-table tbody tr th{text-align:center;background:#d0d0d0;margin:2px}
 #moin-create-table tbody tr td{text-align:center;background:#f0f0f0;}
