--- a/MoinMoin/themes/foobar/templates/modify_applet.html
+++ b/MoinMoin/themes/foobar/templates/modify_applet.html
@@ -2,7 +2,7 @@
 {% extends theme("local.html") %}
 {% block content %}
 <h1>{{ _("Modifying %(item_name)s", item_name=item_name) }}</h1>
-<div class="moin-form">
+<div id="moin-modify" class="moin-form">
 {{ gen.form.open(form, method='post', action='', enctype='multipart/form-data') }}
 {{ forms.render_errors(form) }}
 {% block extra_form %}{% endblock %}
