--- a/MoinMoin/themes/foobar/templates/itemviews.html
+++ b/MoinMoin/themes/foobar/templates/itemviews.html
@@ -35,7 +35,7 @@
 
             {%- if endpoint in [
                 'frontend.global_history', 'frontend.global_index', 'frontend.global_tags',
-                'admin.index',
+                'admin.index', 'admin.index_user',
             ] %}
                 <li>
                     <a href="{{ url_for(endpoint) }}" title="{{ title }}" rel="nofollow">{{ label }}</a>
