--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -823,11 +823,12 @@ ol
         // for >= second level we need less
         margin-left 1.5em
 
-li, dt
-    padding 0.1em
+li
+    padding 0.2em
 
 dt
     font-weight bold
+    padding 0.1em
 dd
     margin-left 1.5em
 
