--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -541,6 +541,8 @@ a.moin-conflict:before
 .moin-tab-titles
     margin -.5em 
     list-style none
+    span
+        display none
 
 #moin-usersetting-title
     li a
