Foobar theme item history page local panel removed

--- a/MoinMoin/themes/foobar/templates/history.html
+++ b/MoinMoin/themes/foobar/templates/history.html
@@ -1,4 +1,4 @@
-{% extends theme("local.html") %}
+{% extends theme("global.html") %}
 {% import "utils.html" as utils %}
 {% block content %}
     {% set (history, next_offset, previous_offset) = history_page %}
