--- a/MoinMoin/templates/modify_binary.html
+++ b/MoinMoin/templates/modify_binary.html
@@ -1,9 +1,9 @@
 {% import "forms.html" as forms %}
 {% extends "modify_applet.html" %}
 {% block extra_form %}
-{{ gen.input(form['submit'], class='button', type='submit') }}
+{{ forms.render(form['submit']) }}
 <dl>
     {{ forms.render_textcha(gen, form) }}
-    {{ forms.render_field(gen, form['comment'], 'text') }}
+    {{ forms.render(form['comment']) }}
 </dl>
 {% endblock %}
