--- a/MoinMoin/templates/openid_register.html
+++ b/MoinMoin/templates/openid_register.html
@@ -7,18 +7,17 @@
 {{ gen.form.open(form, method="post", action=url_for('frontend.register')) }}
   {{ forms.render_errors(form) }}
   <dl>
-    {{ gen.input(form['submit'], type='hidden') }}
 
     <dt>{{ gen.label(form['openid']) }}</dt>
     <dd>{{ gen.input(form['openid'], type='text', readonly='1') }}</dd>
 
-    {{ forms.render_field(gen, form['username'], 'text') }}
-    {{ forms.render_field(gen, form['password1'], 'password') }}
-    {{ forms.render_field(gen, form['password2'], 'password') }}
-    {{ forms.render_field(gen, form['email'], 'text') }}
+    {{ forms.render(form['username']) }}
+    {{ forms.render(form['password1']) }}
+    {{ forms.render(form['password2']) }}
+    {{ forms.render(form['email']) }}
     {{ forms.render_textcha(gen, form) }}
   </dl>
-  <input type="submit" value="{{ _("Register") }}" />
+  {{ forms.render(form['submit']) }}
 {{ gen.form.close() }}
 </div>
 {% endblock %}
