--- a/MoinMoin/templates/search.html
+++ b/MoinMoin/templates/search.html
@@ -18,9 +18,9 @@
     {% endif %}
     {{ gen.form.open(medium_search_form, id='moin-long-searchform', method='get', action=url_for('frontend.search')) }}
         <div>
-            {{ gen.input(medium_search_form['q'], type='search', id='moin-search-query') }}
-            {{ gen.input(medium_search_form['submit'], type='submit') }}
-            {{ forms.render_field_without_markup(gen, medium_search_form['history'], 'checkbox') }}
+            {{ forms.render(medium_search_form['q']) }}
+            {{ forms.render(medium_search_form['submit']) }}
+            {{ forms.render(medium_search_form['history']) }}
             {{ forms.render_errors(medium_search_form) }}
         </div>
     {{ gen.form.close() }}
