--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -200,8 +200,8 @@ div p{margin:.5em .2em;font-size:.9em;line-height:1.2em;text-align:justify}
 #moin-footer ul a,#moin-credits a{color:#616161}
 #moin-footer-logos{float:right;}
 #moin-footer-logos ul li{display:inline}
-.moin-itemviews a[title="Show"],.moin-itemviews a[title="Delete this item"],.moin-itemviews a[title="Completely destroy this item"],.moin-itemviews a[title="Rename this item"],.moin-itemviews a[title="Edit or Upload"]{color:#4fa8fa}
-#moin-global-panel a.moin-usersettings,#moin-global-panel a.moin-logout{color:#4fa8fa}
+.moin-itemviews a:visited,#moin-trail a:visited,#moin-user a:visited{color:#4fa8fa}
+.moin-itemviews a:hover,#moin-trail a:hover,#moin-user a:hover{color:#007cef}
 label{display:block;font-weight:bold}
 input[type="submit"],input[type="button"],button{font-weight:bold;font-size:.75em;background:#d6d5d0;padding:4px 15px;border:1px solid #ccc;border-radius:6px;box-shadow:1px 1px 2px #9d9d9b;cursor:pointer;}
 input[type="submit"]:hover,input[type="button"]:hover,button:hover{box-shadow:1px 1px 2px #000}
