--- a/MoinMoin/themes/foobar/templates/layout.html
+++ b/MoinMoin/themes/foobar/templates/layout.html
@@ -35,7 +35,7 @@
 
         {% set trail_items = theme_supp.path_breadcrumbs() %}
         {% if trail_items %}
-        <li>Trail
+        <li id="moin-trail">Trail
             <ul>
             {% for wiki_name, item_name, item_href, exists, err in trail_items %}
                 <li>
@@ -56,7 +56,7 @@
             </ul>
         </li>
         {% endif %}
-        <li>User
+        <li id="moin-user">User
         <ul>
         {% if user.valid -%}
 	    {% set avatar = user.avatar(20) %}
