--- a/MoinMoin/templates/blog.html
+++ b/MoinMoin/templates/blog.html
@@ -1,11 +1,11 @@
 {% extends theme("blog_layout.html") %}
 
 {% block blog_content %}
-    {% if blog_post_items %}
-        {% for post_item in blog_post_items %}
-            {{ show_post(post_item) }}
+    {% if blog_entry_items %}
+        {% for entry_item in blog_entry_items %}
+            {{ show_blog_entry(entry_item) }}
         {% endfor %}
     {% else %}
-        {{ _("There are no posts in this blog.") }}
+        {{ _("There are no entries in this blog.") }}
     {% endif %}
 {% endblock %}
