--- a/MoinMoin/templates/blog_entry.html
+++ b/MoinMoin/templates/blog_entry.html
@@ -1,7 +1,7 @@
 {% extends theme("blog_layout.html") %}
 
 {% block blog_content %}
-    {% if blog_post_item %}
-        {{ show_post(blog_post_item) }}
+    {% if blog_entry_item %}
+        {{ show_blog_entry(blog_entry_item) }}
     {% endif %}
 {% endblock %}
