--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -292,12 +292,12 @@ a.moin-conflict:before { content: url(../img/moin-conflict.png); margin: 0 0.2em
 #moin-blog-header { margin: 1em 0 -1em 0; }
 #moin-blog-content { padding: 0 2em 0 0; display: table-cell }
 #moin-blog-sidebar { width: 15em; display: table-cell; }
-.moin-post-info { font-size: 0.8em; color: #888888; }
-.moin-post-bottominfo { font-size: 0.8em; color: #888888; padding: 0em 1em; border: 1px solid #DEDEDE;}
-ul.moin-post-tags { list-style: none; display: inline; margin: 0; }
-ul.moin-post-tags li { display: inline; }
-ul.moin-post-tags li:after { content: ","; } 
-ul.moin-post-tags li:last-child:after { content: ""; }
+.moin-blog-entry-info { font-size: 0.8em; color: #888888; }
+.moin-blog-entry-bottominfo { font-size: 0.8em; color: #888888; padding: 0em 1em; border: 1px solid #DEDEDE;}
+ul.moin-blog-entry-tags { list-style: none; display: inline; margin: 0; }
+ul.moin-blog-entry-tags li { display: inline; }
+ul.moin-blog-entry-tags li:after { content: ","; } 
+ul.moin-blog-entry-tags li:last-child:after { content: ""; }
 
 /* popup */
 #popup { background: transparent url("../img/moin-transparent-bg.png") repeat; padding: 5px; width: 40%; position: absolute; top: 10%; left: 30%; display: none; z-index: 10; }
